...
                .padding(.top, 15)
            
            TextField("Email Address",text:self.$email)
                .autocapitalization(.none)
                .padding()
                .background(RoundedRectangle(cornerRadius:6).stroke(borderColor,lineWidth:2))
                .padding(.top, 0).accessibility(identifier: "mail")
          
            Button(action: {
                self.Verify()
            }) {
                Text("Sign in")
                    .foregroundColor(.white)
                    .fontWeight(.bold)
                    .padding(.vertical)
                 .frame(width: UIScreen.main.bounds.width - 100)
            }
            .background(Color(.systemBlue)).accessibility(identifier: "subBtn")
            .cornerRadius(6)
            .padding(.top, 15)
            .alert(isPresented: $alert){()->Alert in
                return Alert(title: Text("\(self.title)"), dismissButton:
                    .default(Text("OK").fontWeight(.semibold)))
            }
...
