...
                Button(action: {
                    self.ResetPassword()
                }) {
                    Text("Forget Password")
                        .fontWeight(.medium)
                        .foregroundColor(Color(.blue))
                }.padding(.top, 10.0).accessibility(identifier: "fPassBtn")
            }
            
            // Sign in button
            Button(action: {
                self.Login()
            }) {
...
